# 3dobjectdetection

./: .gitignore
corresponding/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  correspondence-grouping.cpp
corresponding/data/: mario000.pcd  scene001.pcd
corresponding/inc/: corresponding_SIFT.h  visualize_feature.h
dataset/steder11icra_dataset/models/: armchair.pcd  cart.pcd  cup.pcd  office_chair.pcd  pioneer_robot.pcd  stapler.pcd  teddy_bear.pcd
dataset/steder11icra_dataset/scenes/: scene01_with_armchair.pcd  scene01_with_cart.pcd  scene01_with_office_chair.pcd  scene01_with_pioneer_robot.pcd  scene02_with_armchair.pcd  scene03_with_armchair.pcd  scene04_with_armchair.pcd  scene05_with_armchair.pcd  scene06_with_armchair.pcd  scene07_with_armchair.pcd  scene08_with_armchair.pcd  scene09_with_armchair.pcd  scene10_with_armchair.pcd
narf_obj_detection/: .main.cpp.swp  main.cpp  main_backup.cpp  main_backup2.cpp
narf_obj_detection/cfg/: .robot.txt.swp  robot.txt
ni_viewer/: CMakeLists.txt
range_img/: .range_image_visualization.cpp.swp  CMakeLists.txt  range_image_visualization.cpp  range_image_visualization_bk.cpp
range_img_obj_detection/: CMakeLists.txt  main.cpp  main_backup.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pcd_write
test2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pcd_write_test
